Bug 6671: STG: Reply filed not visible

--- a/src/pages/external-access/ticket-sms/ticket-sms.scss
+++ b/src/pages/external-access/ticket-sms/ticket-sms.scss
@@ -15,5 +15,5 @@
 }
 
 .mobile_message_wrapper{
-  height: calc(100vh - 10.875rem);
+  height: calc(100vh - 7rem);
 }
